# from-space-to-telegram

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
from_space_to_telegram/: downloading.py  main.py  run_scripts.py  telegram_bot.py
from_space_to_telegram/scripts/: fetch_nasa_apod_images.py  fetch_nasa_epic_images.py  fetch_spacex_images.py
