[tool.poetry]
name = "from-space-to-telegram"
version = "0.1.0"
description = ""
authors = ["Lev Bazarnov <16255087+lbazarnov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "from_space_to_telegram"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
python-telegram-bot = "13.15"

[tool.poetry.scripts]
from-space-to-telegram = "from_space_to_telegram.main:main"
fetch-spacex-images = "from_space_to_telegram.scripts.fetch_spacex_images:main"
fetch-nasa-apod = "from_space_to_telegram.scripts.fetch_nasa_apod_images:main"
fetch-nasa-epic = "from_space_to_telegram.scripts.fetch_nasa_epic_images:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
